--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "concurrently": "^6.4.0",
     "react-icons": "^4.8.0",
-    "react-slider": "^2.0.4"
+    "react-slider": "^2.0.4",
+    "validator": "^13.9.0"
   }
 }
