--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   "dependencies": {
     "concurrently": "^6.4.0",
     "react-icons": "^4.8.0",
-    "react-slider": "^2.0.4"
+    "react-slider": "^2.0.4",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^12.3.0"
   }
 }
